[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Ui_Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/PauseScene.gd" type="Script" id=2]

[node name="PauseScene" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = -110.852
margin_right = 119.0
margin_bottom = -79.8517
text = "Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.5
margin_top = -71.1675
margin_right = 177.5
margin_bottom = 100.832
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="ColorRect/VBoxContainer"]
margin_right = 355.0
margin_bottom = 54.0
size_flags_vertical = 3
text = "Resume"

[node name="Retry" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 58.0
margin_right = 355.0
margin_bottom = 113.0
size_flags_vertical = 3
text = "Retry"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 117.0
margin_right = 355.0
margin_bottom = 172.0
size_flags_vertical = 3

[node name="MainMenu" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_right = 175.0
margin_bottom = 55.0
size_flags_horizontal = 3
text = "MainMenu"

[node name="Quit" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 179.0
margin_right = 355.0
margin_bottom = 55.0
size_flags_horizontal = 3
text = "Quit"
[connection signal="button_up" from="ColorRect/VBoxContainer/Resume" to="." method="_on_Resume_button_up"]
[connection signal="button_up" from="ColorRect/VBoxContainer/Retry" to="." method="_on_Retry_button_up"]
[connection signal="button_up" from="ColorRect/VBoxContainer/HBoxContainer/MainMenu" to="." method="_on_MainMenu_button_up"]
[connection signal="button_up" from="ColorRect/VBoxContainer/HBoxContainer/Quit" to="." method="_on_Quit_button_up"]
